[gd_scene load_steps=11 format=2]

[ext_resource path="res://rocket assets/graphics/green-board-with-wood-frame-design-vector-17224636.jpg" type="Texture" id=1]
[ext_resource path="res://rocket assets/graphics/Better Sweet.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ScoreMenu.gd" type="Script" id=3]
[ext_resource path="res://Scores.gd" type="Script" id=4]
[ext_resource path="res://Wallet.gd" type="Script" id=5]
[ext_resource path="res://rocket assets/graphics/frame.png" type="Texture" id=6]
[ext_resource path="res://rocket assets/graphics/animeace.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_bottom = -20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="ScoreMenu" type="CanvasLayer"]
layer = 3
script = ExtResource( 3 )

[node name="ScoreBoard" type="NinePatchRect" parent="."]
visible = false
margin_left = 88.1837
margin_top = 178.685
margin_right = 628.184
margin_bottom = 703.685
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 991.023, 711.658 )
patch_margin_left = 41
patch_margin_top = 38
patch_margin_right = 43
patch_margin_bottom = 41
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Label" parent="ScoreBoard"]
margin_left = 48.8336
margin_top = 29.5162
margin_right = 484.834
margin_bottom = 332.516
custom_fonts/font = SubResource( 1 )
text = "SCORE BOARD

Score : 000
Coins collected : 10
Diamonds collected : 2
Total gained : 100"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wallet" type="Label" parent="ScoreBoard"]
margin_left = 50.9846
margin_top = 376.231
margin_right = 356.985
margin_bottom = 461.231
custom_fonts/font = SubResource( 2 )
text = "Wallet : 100"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="ScoreBoard"]
modulate = Color( 0.709804, 0.494118, 0.152941, 1 )
margin_left = 584.801
margin_top = 454.041
margin_right = 1664.8
margin_bottom = 2674.04
rect_rotation = 90.0
rect_scale = Vector2( 0.1, 0.1 )
disabled = true
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="ScoreBoard"]
margin_left = 433.959
margin_top = 491.095
margin_right = 519.959
margin_bottom = 525.095
custom_fonts/font = SubResource( 3 )
text = "Next"
[connection signal="visibility_changed" from="ScoreBoard" to="ScoreBoard/Wallet" method="_on_ScoreBoard_visibility_changed"]
[connection signal="visibility_changed" from="ScoreBoard" to="ScoreBoard/Scores" method="_on_ScoreBoard_visibility_changed"]
[connection signal="pressed" from="ScoreBoard/NextButton" to="." method="_on_NextButton_pressed"]
